--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -15,7 +15,9 @@
         {% endblock %}
     </div>
     <div id="sidebar">
-        <h2>Mój blog</h2>
+        <h2>
+            <a href="{% url 'blog:post_list' %}">Mój blog</a>
+        </h2>
         <p>
             To jest mój blog.
             Dotychczas opublikowałem {% total_posts %} postów.
@@ -23,6 +25,11 @@
         <p>
             <a href="{% url 'blog:post_feed' %}">
                 Subskrybuj mój kanał RSS
+            </a>
+        </p>
+        <p>
+            <a href="{% url 'blog:featured_posts' %}">
+                Wyróżnione wpisy
             </a>
         </p>
         <h3>Najnowsze posty</h3>
