Dodałem licznik wyświetleń
Dodałem do postów licznik wyświetleń.
W panelu administratora dodałem kolumny z ilością wyświetleń i komentarzy po których można sortować posty.
Dodałem w szablonach wyświetlanie ilości wyświetleń posta obok daty publikacji.

--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h1>{{ post.title }}</h1>
 <p class="date">
-    Opublikowany {{ post.publish }} przez {{ post.author }}
+    Opublikowany {{ post.publish }} przez {{ post.author }} {{ post.viewed }} 👁
 </p>
 {{ post.body|markdown }}
 <p>
