--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -14,6 +14,7 @@
         {{ post.title }}
     </a>
 </h2>
+
 <p class="tags">Tagi:
     {% for tag in post.tags.all %}
     <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
@@ -22,7 +23,7 @@
     {% endfor %}
 </p>
 <p class="date">
-    Opublikowany {{ post.publish }} przez {{ post.author }}
+    Opublikowany {{ post.publish }} przez {{ post.author }} {{ post.viewed }} 👁
 </p>
 {{ post.body|markdown|truncatewords_html:30 }}
 {% endfor %}
